name:                haskell-fun
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sleexyz/haskell-fun#readme
license:             BSD3
author:              Sean Lee
maintainer:          freshdried@gmail.com
copyright:           MIT
category:            fun
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty-show
                     , ghc-prim
                     , ansi-terminal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sleexyz/haskell-fun
